--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Starship Mud</title>
+	<title>REPLACE WITH WULF CLIENT</title>
 	<link rel="stylesheet" type="text/css" href="static/styles/starship.css" />
 	<link rel="stylesheet" type="text/css" href="static/styles/fontawesome-free-5.0.12/fontawesome-all.css" />
 	<script src="/socket.io/socket.io.js"></script>
